// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Table should not render empty row message & header when prop was not available 1`] = `
.c0 {
  border-collapse: collapse;
  width: 100%;
}

<div>
  <table
    class="c0"
  >
    <tbody />
  </table>
</div>
`;

exports[`Table should render empty row message 1`] = `
.c0 {
  border-collapse: collapse;
  width: 100%;
}

<div>
  <table
    class="c0"
  >
    <tbody>
      <tr>
        <td
          colspan="2"
        >
          No Data
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`Table should render rows for cell config 1`] = `
.c0 {
  border-collapse: collapse;
  width: 100%;
}

.c1 {
  cursor: pointer;
  font-size: 1.1rem;
}

.c1:nth-child(even) {
  background-color: #fafafa;
}

.c1:hover {
  background-color: #eee;
}

.c2 {
  padding: 0.75rem 0.5rem;
  text-align: left;
}

<div>
  <table
    class="c0"
  >
    <tbody>
      <tr
        class="c1"
        title="Click to open payment details"
      >
        <td
          class="c2"
        >
          Émile Zola
        </td>
        <td
          class="c2"
        >
          04/04/2022
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;
